Stuck, head empty. Might fix later

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,34 @@
-.App {
-  font-family: sans-serif;
-  text-align: center;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+  color-scheme: dark !important;
 }
 
-.dashboard-layout {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1rem;
+html {
+  background-color: #222;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  text-align: center;
+  padding: 1.5rem;
+  background-color: #111;
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, .4);
+}
+
+header nav {
+  margin-left: auto;
+}
+
+header a {
+  padding: .5rem;
+  text-decoration: none;
+  color: white;
+  border: solid 2px #222;
+  border-radius: 5px;
 }
